--- a/package.json
+++ b/package.json
@@ -104,13 +104,14 @@
     "request": "browser-request"
   },
   "dependencies": {
-    "@dashevo/x11-hash-js": "^1.0.2",
     "@types/node": "^12.12.12",
     "bloom-filter": "^0.2.0",
     "bn.js": "=4.11.8",
     "bs58": "=4.0.1",
     "elliptic": "=6.4.1",
     "inherits": "=2.0.1",
+    "node-x16r": "RavenDevKit/node-x16r",
+    "node-x16rv2": "RavenDevKit/node-x16rv2",
     "lodash": "^4.17.15",
     "unorm": "^1.4.1"
   },
